syntax = "proto3";

package auction;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Honeymoond24/auction-system/internal/interfaces/grpc_server/pb";

service AuctionService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc CreateLot(CreateLotRequest) returns (CreateLotResponse);
  rpc PlaceBid(PlaceBidRequest) returns (PlaceBidResponse);
  rpc CloseAuction(CloseAuctionRequest) returns (CloseAuctionResponse);
  rpc GetAuctionStatus(GetAuctionStatusRequest) returns (GetAuctionStatusResponse);
  rpc ReplenishBalance(ReplenishBalanceRequest) returns (ReplenishBalanceResponse);
}

message CreateUserRequest {
  string username = 1;
}

message CreateUserResponse {
  int64 id = 1;
}

message CreateLotRequest {
  int64 seller_id = 1;
  string title = 2;
  string description = 3;
  double starting_price = 4;
  double min_bid_step = 5;
  google.protobuf.Timestamp auction_start_time = 6;
  google.protobuf.Timestamp auction_end_time = 7;
}

message CreateLotResponse {
  int64 id = 1;
}

message PlaceBidRequest {
  int64 auction_id = 1;
  int64 bidder_id = 2;
  double amount = 3;
}

message PlaceBidResponse {
  bool success = 1;
}

message CloseAuctionRequest {
  int64 auction_id = 1;
}

message CloseAuctionResponse {
  int64 winner_id = 1;
  double final_price = 2;
}

message GetAuctionStatusRequest {
  int64 auction_id = 1;
}

message GetAuctionStatusResponse {
  string status = 1;
  int64 winner_id = 2;
  double highest_bid = 3;
}

message ReplenishBalanceRequest {
  int64 user_id = 1;
  double amount = 2;
}

message ReplenishBalanceResponse {
  bool success = 1;
}
